Spacing fixes

--- a/styles/style.css
+++ b/styles/style.css
@@ -169,7 +169,7 @@ footer {
 }
 
 .menu {
-  height: 850px;
+  height: 900px;
   margin: 20px;
   border: 2px solid;
   background-color: #96968f93;
